OS X: dual screen rendering issue

XMLWordPrintable

      OS X 10.11, Build-in Retina, 2nd ViewSonic 1080p display, JDK9 b136

      Please run the attached test sample and move it from the 2nd display slowly to the 1st (buit-in) => nok.png

      the issue isn't reproducible with JDK8 b132

        1. nok.png
          nok.png
          11 kB
        2. icon.png
          icon.png
          0.1 kB
        3. icon@2x.png
          icon@2x.png
          0.2 kB
        4. IconTest.java
          0.7 kB

            Assignee:
            Jim Graham
            Reporter:
            Alexander Stepanov (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: