8166856: OS X: dual screen rendering issue

Reviewed-by: ckyang